Work ont he right panel thing. Making headers correct spacing.

--- a/project01/lifestyle.css
+++ b/project01/lifestyle.css
@@ -17,6 +17,14 @@ body{
     padding-bottom: 10px;
     padding-top: 8px;
 }
+
+
+h4 {
+    margin-top: 6px;
+}
+h5 {
+    margin-bottom: 24px;
+}
 h6 h1 {
     margin-left: 5px;
     margin-bottom: 0px;
@@ -95,6 +103,8 @@ div.internaltext, h2 {
     position: relative;
     top: 9px;
     right: 10px;
+    padding-right: 30px;
+    padding-left: 6px
 }
 
 #footer {
